.argo/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-backend
  namespace: staging
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports: 
  - name: default
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-staging-app-backend
  type: ClusterIP
