.argo/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: new-asgard-letsencrypt-prod
  name: backend-ingress
  namespace: staging
spec:
  rules:
  - host: stag.sec.devops.uniks.de
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/api/v1"
        backend:
          service:
            name: app-backend
            port: 
              number: 3000
  tls:
  - hosts:
    - stag.sec.devops.uniks.de
    secretName: backend-secret
